Fixed About image on mobile

--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -215,7 +215,11 @@
 
    /* About Section
    -------------------------------------------------------------------- */
-   #about .profile-pic { display: none; }
+   #about .profile-pic { 
+      width:  100%; 
+      padding-right: 50px;
+      padding-bottom: 20px;
+   }
    #about .download .button {
       width: 100%;
       text-align: center;
